ServerPool to attend several clients

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 set(SOURCE_FILES main.cpp
         lib/netry/include/SocketException.h lib/netry/include/ServerSocket.h lib/netry/include/NetStream.h lib/netry/include/Socket.h
         lib/netry/src/ServerSocket.cpp lib/netry/src/Socket.cpp lib/netry/src/NetStream.cpp
-        src/Client.cpp include/Client.h src/Server.cpp include/Server.h include/Consts.h include/FileHandler.h include/InfraException.h include/InfraException.h)
+        src/Client.cpp include/Client.h src/Server.cpp include/Server.h include/FileHandler.h include/InfraException.h include/InfraException.h src/ServerPool.cpp include/ServerPool.h)
 
 add_executable(file_server ${SOURCE_FILES})
